Refactor Main Bar to handle dynamic # components

--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,6 +1,7 @@
 #clock {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
   font-size: 2em;
 }
