--- a/src/components/MainBar/MainBar.css
+++ b/src/components/MainBar/MainBar.css
@@ -7,10 +7,20 @@
 }
 
 #content-container {
-  width: 75%;
+  width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0 auto;
+  display: grid;
+  column-gap: 2.5rem;
+}
+
+.grid-1-items {
+  grid-template-columns: 1fr fit-content(100%) 1fr;
+}
+
+.grid-2-items {
+  grid-template-columns: 1fr fit-content(50%) fit-content(50%) 1fr;
+}
+
+.grid-3-items {
+  grid-template-columns: 1fr fit-content(33%) fit-content(33%) fit-content(33%) 1fr;
 }
