--- a/src/components/MainBar/MainBar.css
+++ b/src/components/MainBar/MainBar.css
@@ -22,5 +22,7 @@
 }
 
 .grid-3-items {
-  grid-template-columns: 1fr fit-content(100%) fit-content(100%) fit-content(100%) 1fr;
+  grid-template-columns: 1fr fit-content(100%) fit-content(100%) fit-content(
+      100%
+    ) 1fr;
 }
